--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Apr. 11, 2018   |   "
+echo "   |   May. 03, 2018   |   "
 
 // Launch: -high -novid -freq 144
 
@@ -27,7 +27,7 @@ cl_interp_ratio "1"
 // Sound     //
 ///////////////
 
-snd_stream "0"
+snd_disable_legacy_audio_cache "1"
 //snd_updateaudiocache
 //snd_rebuildaudiocache
 
