--- a/dylancsgo.cfg
+++ b/dylancsgo.cfg
@@ -1,15 +1,15 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jul. 07, 2018   |   "
+echo "   |   Jun. 25, 2018   |   "
 
-// Launch: -freq 144 -tickrate 128
+// Launch: -novid -freq 144 -tickrate 128
 
 
 ///////////////
 // Rates     //
 ///////////////
 
-mm_dedicated_search_maxping "220.000000"
+mm_dedicated_search_maxping "250.000000"
 net_client_steamdatagram_enable_override "0"
 sdr ClientForceRelayCluster "" // sgp, tyo, hkg, lax, eat
 
@@ -36,10 +36,10 @@ snd_mix_async "1"
 snd_mixahead "0.02"
 snd_mute_losefocus "0"
 
+snd_musicvolume "0.0"
 snd_deathcamera_volume "0.0"
 snd_mapobjective_volume "0.0"
 snd_menumusic_volume "0.0"
-snd_mvp_volume "0.5"
 snd_roundend_volume "0.0"
 snd_roundstart_volume "0.0"
 snd_tensecondwarning_volume "0.0"
@@ -62,7 +62,7 @@ dsp_enhance_stereo "0"
 
 snd_hrtf_distance_behind "100"
 
-//lobby_voice_chat_enabled "0"
+lobby_voice_chat_enabled "0"
 cl_mute_all_but_friends_and_party "0"
 cl_mute_enemy_team "0"
 
@@ -89,28 +89,28 @@ cl_draw_only_deathnotices "0"
 cl_drawhud_force_radar "0"
 cl_drawhud_force_deathnotices "0"
 cl_showloadout "1"
-//cl_loadout_colorweaponnames "1"
+cl_loadout_colorweaponnames "1"
 
 cl_teammate_colors_show "1"
 cl_teamid_overhead_always "1"
-//cl_teamid_overhead_name_alpha "245"
+cl_teamid_overhead_name_alpha "245"
 
-cl_hud_bomb_under_radar "0"
-cl_hud_healthammo_style "1"
+cl_hud_bomb_under_radar "1"
+cl_hud_healthammo_style "0"
 
 cl_hud_playercount_pos "1"
 cl_hud_playercount_showcount "0"
 cl_color "3"
 
-cl_hud_color "1"
+cl_hud_color "3"
 cl_hud_background_alpha "0"
 
 cl_showfps "0"
 cl_showpos "0"
 
 net_graph "0"
-net_graphheight "1000"
-net_graphpos "2"
+net_graphheight "0"
+net_graphpos "1"
 
 net_graphproportionalfont "1"
 net_graphtext "1"
@@ -174,7 +174,7 @@ crosshair "1"
 cl_observercrosshair "1"
 cl_fixedcrosshairgap "3"
 
-cl_crosshair_sniper_width "2"
+cl_crosshair_sniper_width "1"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_drawoutline "0"
 cl_crosshair_outlinethickness "1"
@@ -187,7 +187,7 @@ cl_crosshairdot "1"
 cl_crosshairgap "1"
 cl_crosshairgap_useweaponvalue "1"
 cl_crosshairstyle "5"
-cl_crosshairsize "6"
+cl_crosshairsize "4"
 cl_crosshairscale "0"
 cl_crosshairthickness "0.5"
 cl_crosshairalpha "200"
@@ -205,6 +205,7 @@ cl_crosshaircolor_b "50"
 sensitivity "3.33"
 zoom_sensitivity_ratio_mouse "1.0"
 
+cl_mouseenable "1"
 cl_mouselook "1"
 joystick "0"
 joystick_force_disabled "1"
@@ -236,7 +237,7 @@ alias "+jumpthrow" "-attack; +jump"
 alias "-jumpthrow" "-jump"
 
 alias "+showpos" "cl_showpos 1"		// "cl_crosshairsize 450"
-alias "-showpos" "cl_showpos 0"		// "cl_crosshairsize 6"
+alias "-showpos" "cl_showpos 0"		// "cl_crosshairsize 4"
 
 alias "+where" "+use; gameinstructor_enable 1; +cl_show_team_equipment"
 alias "-where" "-use; gameinstructor_enable 0; -cl_show_team_equipment"
@@ -246,7 +247,7 @@ bind "1" "slot1"
 bind "2" "slot2"
 bind "3" "slot7"
 bind "4" "slot6"
-bind "5" "+showpos; slot8"
+bind "5" "slot8"
 bind "6" "slot5"
 bind "7" "slot5"
 bind "8" "slot4"
@@ -258,21 +259,21 @@ bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "toggle cl_radar_always_centered 0 1; toggle cl_radar_scale 0.3 0.7; toggle cl_righthand 1 0; toggle cl_teamid_overhead_always 2 1"
 bind "g" "drop"
-bind "h" "say_team Drop"
+unbind "h"
 bind "i" "buyequip"
 bind "j" "impulse 100"
 bind "k" "+voicerecord"
 unbind "l"
-bind "m" "teammenu; say_team Mid"
+bind "m" "teammenu"
 bind "n" "noclip"
-bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2; cl_crosshairdot 0; cl_crosshairgap -4; cl_crosshairgap_useweaponvalue 0"
+bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2.5; cl_crosshairdot 0; cl_crosshairgap -2; cl_crosshairgap_useweaponvalue 0"
 bind "p" "cl_crosshairsize 1; cl_crosshairgap -1; cl_crosshairgap_useweaponvalue 0"
-bind "q" "+attack2"
+bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+back"
 bind "t" "+where"
 bind "u" "messagemode2"
-bind "v" "toggle mat_monitorgamma 2.6 1.6; r_cleardecals"
+bind "v" "toggle mat_monitorgamma 2.2 1.6; r_cleardecals"
 bind "w" "+forward"
 bind "x" "radio2"
 bind "y" "messagemode"
@@ -288,10 +289,10 @@ bind "KP_RIGHTARROW" "buy defuser"
 bind "KP_HOME" "buy taser 34"
 bind "KP_UPARROW" "autobuy"
 bind "KP_PGUP" "rebuy"
-bind "KP_SLASH" "say_team <- Left"
-bind "KP_MULTIPLY" "say_team Right ->"
-bind "KP_MINUS" "say_team Upper"
-bind "KP_PLUS" "say_team Lower"
+unbind "KP_SLASH"
+unbind "KP_MULTIPLY"
+unbind "KP_MINUS"
+unbind "KP_PLUS"
 bind "KP_ENTER" "buymenu"
 bind "[" "toggle cl_crosshairgap_useweaponvalue 0 1"
 bind "]" "toggle cl_crosshairgap 0 -1 1"
@@ -302,7 +303,7 @@ bind "," "buyammo1; buyammo2"
 bind "." "toggle hud_scaling 0.5 0.95"
 bind "/" "toggle cl_hud_playercount_showcount 1 0"
 bind "\" "toggle cl_crosshairdot 0 1"
-bind "-" "toggle cl_crosshairsize 2 1 6"
+bind "-" "toggle cl_crosshairsize 2 1 4"
 bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 3 1"
 unbind "ENTER"
 bind "SPACE" "+jump"
@@ -311,11 +312,11 @@ bind "TAB" "+showscores"
 bind "CAPSLOCK" "+speed"
 unbind "NUMLOCK"
 bind "ESCAPE" "cancelselect"
-bind "INS" "voice_enable 0; echo - Voice: 0%"
+unbind "INS"
 bind "HOME" "voice_enable 1; voice_scale 0.1; echo - Voice: 10%"
-bind "PGUP" "voice_enable 1; voice_scale 0.75; echo - Voice: 75%"
-bind "DEL" "volume 0; echo - Volume: 0%"
-bind "END" "volume 0.2; echo - Volume: 20%"
+unbind "PGUP"
+unbind "DEL"
+unbind "END"
 bind "PGDN" "volume 1; echo - Volume: 100%"
 bind "PAUSE" "pause"
 bind "SHIFT" "+duck"
@@ -327,27 +328,27 @@ bind "RCTRL" "toggle safezonex 1 0.2"
 bind "LWIN" "say Windows key pressed."
 bind "RWIN" "say Windows key pressed."
 bind "APP" "say App key pressed."
-bind "UPARROW" "toggle cl_crosshaircolor 0 1"
+unbind "UPARROW"
 unbind "LEFTARROW"
-bind "DOWNARROW" "toggle cl_hud_color 0 1 2 3 4 5 6 7 8 9 10 11"
+unbind "DOWNARROW"
 unbind "RIGHTARROW"
-bind "F1" "use weapon_c4; drop; say_team Bomb dropped!"
+bind "F1" "use weapon_c4; drop"
 bind "F2" "slot9"
 bind "F3" "slot10"
-bind "F4" "say_team Bomb dropped!"
-bind "F5" "say_team A"
-bind "F6" "say_team B"
-bind "F7" "say_team Bomb go A"
-bind "F8" "say_team Bomb go B"
+unbind "F4"
+unbind "F5"
+unbind "F6"
+unbind "F7"
+unbind "F8"
 bind "F9" "toggle net_graph 1 0"
 bind "F10" "quit prompt"
-bind "F11" "exec csgolow.cfg"
-bind "F12" "exec csgo.cfg"
+unbind "F11"
+bind "F12" "exec dylancsgo.cfg"
 bind "MOUSE1" "+attack"
-bind "MOUSE2" "lastinv"
+bind "MOUSE2" "+attack2"
 bind "MOUSE3" "+lookatweapon"
-bind "MOUSE4" "toggle voice_enable 0 1"
-bind "MOUSE5" "+attack2"
+bind "MOUSE4" "lastinv"
+bind "MOUSE5" "lastinv"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
@@ -378,16 +379,14 @@ cl_forcepreload "1"
 cl_freezecameffects_showholiday "0"
 
 cl_obs_interp_enable "0"
-cl_showpluginmessages2 "0"
+cl_showpluginmessages "1"
 
 mat_queue_mode "2"
 engine_no_focus_sleep "0"
 
-lobby_default_privacy_bits1 "0"
-
-//cl_clanid "2456601"
+cl_clanid "2456601"
 //cl_clanid "8291083"
-cl_clanid ""
+//cl_clanid ""
 
 
 ///////////////
@@ -395,6 +394,6 @@ cl_clanid ""
 ///////////////
 
 
-echo "   |  CATCSGO LOADED!  |   "
+echo "   | DylanCSGO LOADED! |   "
 echo "   ---------------------   "
 echo "                           "
