--- a/traindmawp.cfg
+++ b/traindmawp.cfg
@@ -1,6 +1,6 @@
 echo
 echo "   ---------------------   "
-echo "   |   Mar. 10, 2018   |   "
+echo "   |   Jul. 06, 2018   |   "
 
 
 game_type 0
@@ -85,6 +85,8 @@ mp_maxmoney 0
 mp_startmoney 0
 
 mp_restartgame 1
+
+bind F1 "give weapon_healthshot"
 
 
 echo "   | TRAINDMAWP LOADED |   "
