--- a/cs16.cfg
+++ b/cs16.cfg
@@ -1,16 +1,23 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Sep. 16, 2017   |   "
+echo "   |   Jul. 05, 2018   |   "
+
+// Renderer:        OpenGL
+// HD Models:       Unchecked
 
 
 ///////////////
 // Rates     //
 ///////////////
 
-fps_max "300"
-fps_override "1"
+// Required for bunnyhop.
+fps_max "100"
+fps_override "0"
 
+sys_ticrate "100.0"
 sv_lan_rate "100000.0"
+sv_maxupdaterate "102"
+
 rate "100000"
 cl_cmdrate "102"
 cl_updaterate "102"
@@ -38,7 +45,6 @@ voice_modenable "1"
 
 brightness "2"
 gamma "3"
-gl_vsync "0"
 
 _cl_autowepswitch "0"
 cl_righthand "0"
@@ -49,9 +55,12 @@ hud_centerid "1"
 hud_fastswitch "1"
 hud_takesshots "0"
 
+cl_showfps "0"
+
 net_graph "0"
-net_graphpos "2"
-net_graphwidth "200"
+net_graphpos "1"
+net_graphwidth "420"
+graphheight "40"
 
 cl_bob "0"
 cl_bobcycle "0.8"
@@ -98,6 +107,21 @@ lookstrafe "0"
 // Bindings  //
 ///////////////
 
+alias hand0 "cl_righthand 0; alias hand hand1"
+alias hand1 "cl_righthand 1; alias hand hand0"
+alias hand "hand1"
+
+alias graph0 "net_graph 0; alias graph graph3"
+alias graph3 "net_graph 3; alias graph graph0"
+alias graph "graph3"
+
+alias fps0 "cl_showfps 0; alias fps fps1"
+alias fps1 "cl_showfps 1; alias fps fps0"
+alias fps "fps1"
+
+alias "+jumpthrow" "-attack; +jump"
+alias "-jumpthrow" "-jump"
+
 bind "0" "slot10"
 bind "1" "slot1"
 bind "2" "slot2"
@@ -113,18 +137,23 @@ bind "b" "impulse 201"
 bind "c" "radio3"
 bind "d" "+moveright"
 bind "e" "slot3"
-bind "f" "buyequip; impulse 100"
+bind "f" "hand"
 bind "g" "drop"
-bind "h" "cl_righthand 0"
-bind "j" "cl_righthand 1"
+unbind "h"
+bind "i" "showbriefing"
+unbind "j"
 bind "k" "+voicerecord"
+unbind "l"
 bind "m" "chooseteam"
+bind "n" "nightvision"
+unbind "o"
+unbind "p"
 bind "q" "+attack2"
 bind "r" "+reload"
 bind "s" "+back"
 bind "t" "+use"
 bind "u" "messagemode2"
-bind "v" "brightness 2"
+bind "v" "impulse 100"
 bind "w" "+forward"
 bind "x" "radio2"
 bind "y" "messagemode"
@@ -145,16 +174,16 @@ bind "KP_MUL" "say_team Right ->"
 bind "KP_MINUS" "say_team Upper"
 bind "KP_PLUS" "say_team Lower"
 bind "KP_ENTER" "buy"
-bind "[" "ignoremsg"
-bind "]" "ignorerad"
+unbind "["
+unbind "]"
 bind "`" "toggleconsole"
 bind "," "buyammo1"
 bind "." "buyammo2"
-bind "/" "brightness 0"
-bind "-" ""
-bind "=" ""
+unbind "/"
+unbind "-"
+unbind "="
 bind "SPACE" "+jump"
-bind "BACKSPACE" ""
+unbind "BACKSPACE"
 bind "TAB" "+showscores"
 bind "CAPSLOCK" "+speed"
 bind "ESCAPE" "cancelselect"
@@ -166,7 +195,7 @@ bind "END" "volume 0.2; echo - Volume: 20%"
 bind "PGDN" "volume 1; echo - Volume: 100%"
 bind "PAUSE" "pause"
 bind "SHIFT" "+duck"
-bind "ALT" "+speed"
+bind "ALT" "+jumpthrow"
 bind "CTRL" "+duck"
 unbind "UPARROW"
 unbind "LEFTARROW"
@@ -180,9 +209,9 @@ bind "F5" "say_team A"
 bind "F6" "say_team B"
 bind "F7" "say_team Bomb go A"
 bind "F8" "say_team Bomb go B"
-bind "F9" "net_graph 3"
+bind "F9" "graph"
 bind "F10" "quit"
-bind "F11" "net_graph 0"
+bind "F11" "fps"
 bind "F12" "exec cs16.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "lastinv"
@@ -203,6 +232,10 @@ console "1"
 
 cl_allowdownload "1"
 cl_allowupload "1"
+
+// OpenGL
+gl_vsync "0"
+gl_texturemode "GL_NEAREST"
 
 
 ///////////////
