--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   May. 06, 2018   |   "
+echo "   |   Jul. 07, 2018   |   "
 
-// Launch: -high -novid -freq 144
+// Launch: -freq 144 -tickrate 128
 
 
 ///////////////
@@ -36,10 +36,10 @@ snd_mix_async "1"
 snd_mixahead "0.02"
 snd_mute_losefocus "0"
 
-snd_musicvolume "0.0"
 snd_deathcamera_volume "0.0"
 snd_mapobjective_volume "0.0"
 snd_menumusic_volume "0.0"
+snd_mvp_volume "0.5"
 snd_roundend_volume "0.0"
 snd_roundstart_volume "0.0"
 snd_tensecondwarning_volume "0.0"
@@ -62,7 +62,7 @@ dsp_enhance_stereo "0"
 
 snd_hrtf_distance_behind "100"
 
-lobby_voice_chat_enabled "0"
+//lobby_voice_chat_enabled "0"
 cl_mute_all_but_friends_and_party "0"
 cl_mute_enemy_team "0"
 
@@ -89,20 +89,20 @@ cl_draw_only_deathnotices "0"
 cl_drawhud_force_radar "0"
 cl_drawhud_force_deathnotices "0"
 cl_showloadout "1"
-cl_loadout_colorweaponnames "1"
+//cl_loadout_colorweaponnames "1"
 
 cl_teammate_colors_show "1"
 cl_teamid_overhead_always "1"
-cl_teamid_overhead_name_alpha "245"
+//cl_teamid_overhead_name_alpha "245"
 
-cl_hud_bomb_under_radar "1"
-cl_hud_healthammo_style "0"
+cl_hud_bomb_under_radar "0"
+cl_hud_healthammo_style "1"
 
 cl_hud_playercount_pos "1"
 cl_hud_playercount_showcount "0"
 cl_color "3"
 
-cl_hud_color "6"
+cl_hud_color "1"
 cl_hud_background_alpha "0"
 
 cl_showfps "0"
@@ -145,7 +145,7 @@ option_speed_method "0"
 r_drawtracers_firstperson "1"
 
 cl_autowepswitch "0"
-cl_righthand "0"
+cl_righthand "1"
 
 closeonbuy "1"
 cl_use_opens_buy_menu "0"
@@ -205,7 +205,6 @@ cl_crosshaircolor_b "50"
 sensitivity "3.33"
 zoom_sensitivity_ratio_mouse "1.0"
 
-cl_mouseenable "1"
 cl_mouselook "1"
 joystick "0"
 joystick_force_disabled "1"
@@ -328,9 +327,9 @@ bind "RCTRL" "toggle safezonex 1 0.2"
 bind "LWIN" "say Windows key pressed."
 bind "RWIN" "say Windows key pressed."
 bind "APP" "say App key pressed."
-unbind "UPARROW"
+bind "UPARROW" "toggle cl_crosshaircolor 0 1"
 unbind "LEFTARROW"
-unbind "DOWNARROW"
+bind "DOWNARROW" "toggle cl_hud_color 0 1 2 3 4 5 6 7 8 9 10 11"
 unbind "RIGHTARROW"
 bind "F1" "use weapon_c4; drop; say_team Bomb dropped!"
 bind "F2" "slot9"
@@ -379,10 +378,12 @@ cl_forcepreload "1"
 cl_freezecameffects_showholiday "0"
 
 cl_obs_interp_enable "0"
-cl_showpluginmessages "1"
+cl_showpluginmessages2 "0"
 
 mat_queue_mode "2"
 engine_no_focus_sleep "0"
+
+lobby_default_privacy_bits1 "0"
 
 //cl_clanid "2456601"
 //cl_clanid "8291083"
