--- a/dylancss.cfg
+++ b/dylancss.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jun. 30, 2018   |   "
+echo "   |   Jun. 25, 2018   |   "
 
 ///////////////
 // Rates     //
@@ -21,13 +21,13 @@ cl_interp_ratio "1"
 
 volume "1"
 
-snd_mixahead "0.05"
+snd_mixahead "0.075"
 snd_musicvolume "1"
 snd_mute_losefocus "0"
 snd_legacy_surround "0"
 
 voice_enable "1"
-voice_scale "0.20"
+voice_scale "0.30"
 voice_maxgain "10"
 voice_modenable "1"
 
@@ -62,8 +62,8 @@ cl_showfps "0"
 cl_showpos "0"
 
 net_graph "0"
-net_graphheight "1000"
-net_graphpos "100"
+net_graphheight "64"
+net_graphpos "1"
 
 net_graphsolid "1"
 net_graphtext "1"
@@ -89,7 +89,7 @@ mat_vsync "0"
 //cl_bobup "0.5"
 
 cl_autowepswitch "0"
-cl_righthand "0"
+cl_righthand "1"
 
 mp_playerid "0"
 
@@ -116,7 +116,7 @@ cl_crosshaircolor_g "250"
 cl_crosshaircolor_b "50"
 cl_crosshairdot "1"
 cl_crosshairscale "1200"
-cl_crosshairsize "6"
+cl_crosshairsize "4"
 cl_crosshairspreadscale "0.3"
 cl_crosshairthickness "0.5"
 cl_crosshairusealpha "1"
@@ -171,7 +171,7 @@ bind "1" "slot1"
 bind "2" "slot2"
 bind "3" "use weapon_flashbang"
 bind "4" "use weapon_hegrenade"
-bind "5" "+showpos; use weapon_smokegrenade"
+bind "5" "use weapon_smokegrenade"
 bind "6" "use weapon_c4"
 bind "7" "use weapon_c4"
 bind "8" "slot4"
@@ -183,7 +183,7 @@ bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "toggle cl_righthand 1 0"
 bind "g" "drop"
-bind "h" "say_team Drop"
+unbind "h"
 unbind "i"
 bind "j" "impulse 100"
 bind "k" "+voicerecord"
@@ -192,7 +192,7 @@ bind "m" "chooseteam"
 bind "n" "nightvision"
 bind "o" "buyequip"
 unbind "p"
-bind "q" "+attack2"
+bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+back"
 bind "t" "+use"
@@ -213,10 +213,10 @@ bind "KP_RIGHTARROW" "buy defuser"
 bind "KP_HOME" "buy shield"
 bind "KP_UPARROW" "autobuy"
 bind "KP_PGUP" "rebuy"
-bind "KP_SLASH" "say_team <- Left"
-bind "KP_MULTIPLY" "say_team Right ->"
-bind "KP_MINUS" "say_team Upper"
-bind "KP_PLUS" "say_team Lower"
+unbind "KP_SLASH"
+unbind "KP_MULTIPLY"
+unbind "KP_MINUS"
+unbind "KP_PLUS"
 bind "KP_ENTER" "buymenu"
 unbind "["
 unbind "]"
@@ -236,16 +236,16 @@ bind "TAB" "+showscores"
 bind "CAPSLOCK" "+speed"
 unbind "NUMLOCK"
 bind "ESCAPE" "cancelselect"
-bind "INS" "voice_enable 0; echo - Voice: 0%"
-bind "HOME" "voice_enable 1; voice_scale 0.1; echo - Voice: 10%"
-bind "PGUP" "voice_enable 1; voice_scale 0.75; echo - Voice: 75%"
-bind "DEL" "volume 0; echo - Volume: 0%"
-bind "END" "volume 0.2; echo - Volume: 20%"
+unbind "INS"
+bind "HOME" "voice_enable 1; voice_scale 0.3; echo - Voice: 30%"
+unbind "PGUP"
+unbind "DEL"
+unbind "END"
 bind "PGDN" "volume 1; echo - Volume: 100%"
 bind "PAUSE" "pause"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
-bind "ALT" "+jumpthrow"
+unbind "ALT"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
 unbind "RCTRL"
@@ -256,23 +256,23 @@ unbind "UPARROW"
 unbind "LEFTARROW"
 unbind "DOWNARROW"
 unbind "RIGHTARROW"
-bind "F1" "use weapon_c4; drop; say_team Bomb dropped!"
+bind "F1" "use weapon_c4; drop"
 bind "F2" "rebuy"
-bind "F3" "say_team Bomb"
-bind "F4" "say_team Bomb dropped!"
-bind "F5" "say_team A"
-bind "F6" "say_team B"
-bind "F7" "say_team Bomb go A"
-bind "F8" "say_team Bomb go B"
+unbind "F3"
+unbind "F4"
+unbind "F5"
+unbind "F6"
+unbind "F7"
+unbind "F8"
 bind "F9" "toggle net_graph 1 0"
 bind "F10" "quit"
 bind "F11" ""
-bind "F12" "exec css.cfg"
+bind "F12" "exec dylancss.cfg"
 bind "MOUSE1" "+attack"
-bind "MOUSE2" "lastinv"
+bind "MOUSE2" "+attack2"
 bind "MOUSE3" "impulse 100"
-bind "MOUSE4" "toggle voice_scale 0 0.75 0.20"
-bind "MOUSE5" "+attack2"
+bind "MOUSE4" "lastinv"
+bind "MOUSE5" "lastinv"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
@@ -290,7 +290,7 @@ cl_downloadfilter "all"
 cl_allowdownload "1"
 cl_allowupload "1"
 
-cl_disablehtmlmotd "0"
+cl_disablehtmlmotd "1"
 
 cl_forcepreload "1"
 
@@ -305,6 +305,6 @@ cl_clanid "2456601"
 // End       //
 ///////////////
 
-echo "   |  CATEXEC LOADED!  |   "
+echo "   |  DylanCSS LOADED  |   "
 echo "   ---------------------   "
 echo "                           "
