--- a/traindm.cfg
+++ b/traindm.cfg
@@ -1,6 +1,6 @@
 echo
 echo "   ---------------------   "
-echo "   |   Mar. 10, 2018   |   "
+echo "   |   Jul. 06, 2018   |   "
 
 
 game_type 0
@@ -85,6 +85,8 @@ mp_maxmoney 65000
 mp_startmoney 65000
 
 mp_restartgame 1
+
+bind F1 "give weapon_healthshot"
 
 
 echo "   |  TRAINDM LOADED!  |   "
