Fixed quotation marks.

--- a/cs16.cfg
+++ b/cs16.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jul. 05, 2018   |   "
+echo "   |   Jul. 07, 2018   |   "
 
 // Renderer:        OpenGL
 // HD Models:       Unchecked
@@ -107,17 +107,17 @@ lookstrafe "0"
 // Bindings  //
 ///////////////
 
-alias hand0 "cl_righthand 0; alias hand hand1"
-alias hand1 "cl_righthand 1; alias hand hand0"
-alias hand "hand1"
+alias "hand0" "cl_righthand 0; alias hand hand1"
+alias "hand1" "cl_righthand 1; alias hand hand0"
+alias "hand" "hand1"
 
-alias graph0 "net_graph 0; alias graph graph3"
-alias graph3 "net_graph 3; alias graph graph0"
-alias graph "graph3"
+alias "graph0" "net_graph 0; alias graph graph3"
+alias "graph3" "net_graph 3; alias graph graph0"
+alias "graph" "graph3"
 
-alias fps0 "cl_showfps 0; alias fps fps1"
-alias fps1 "cl_showfps 1; alias fps fps0"
-alias fps "fps1"
+alias "fps0" "cl_showfps 0; alias fps fps1"
+alias "fps1" "cl_showfps 1; alias fps fps0"
+alias "fps" "fps1"
 
 alias "+jumpthrow" "-attack; +jump"
 alias "-jumpthrow" "-jump"
