--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jul. 10, 2018   |   "
+echo "   |   Jul. 11, 2018   |   "
 
 // Launch: -freq 144 -tickrate 128
 
@@ -10,8 +10,8 @@ echo "   |   Jul. 10, 2018   |   "
 ///////////////
 
 mm_dedicated_search_maxping "220.000000"
-net_client_steamdatagram_enable_override "0"
-sdr ClientForceRelayCluster "" // sgp, tyo, hkg, lax, eat
+net_client_steamdatagram_enable_override "0"    // -1 = UDP, 0 = Auto, 1 = SDR
+sdr ClientForceRelayCluster ""                  // sgp, tyo, hkg, lax, eat
 
 fps_max "500"
 fps_max_menu "120"
