Changed cvars for debugging panorama update.
Set a bunch of settings to default.

--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Aug. 04, 2018   |   "
+echo "   |   Aug. 06, 2018   |   "
 
 // Launch: -freq 144 -tickrate 128
 
@@ -9,7 +9,7 @@ echo "   |   Aug. 04, 2018   |   "
 // Rates     //
 ///////////////
 
-mm_dedicated_search_maxping "220.000000"
+mm_dedicated_search_maxping "350.000000"
 net_client_steamdatagram_enable_override "0"    // -1 = UDP, 0 = Auto, 1 = SDR
 sdr ClientForceRelayCluster ""                  // sgp, tyo, hkg, lax, eat
 
@@ -30,7 +30,7 @@ cl_interp_ratio "1"
 volume "1"
 
 snd_mix_async "1"
-snd_mixahead "0.02"
+snd_mixahead "0.025"
 snd_mute_losefocus "0"
 
 snd_deathcamera_volume "0.0"
@@ -54,7 +54,7 @@ voice_mixer_mute "0"
 voice_mixer_volume "1"
 voice_scale "0.1"
 
-windows_speaker_config "1"
+windows_speaker_config "0"
 dsp_enhance_stereo "0"
 
 snd_hrtf_distance_behind "100"
@@ -79,7 +79,7 @@ cl_radar_always_centered "1"
 cl_radar_icon_scale_min "0.4"
 cl_radar_rotate "1"
 cl_radar_scale "0.7"
-cl_radar_square_with_scoreboard "1"
+cl_radar_square_with_scoreboard "0"
 
 cl_draw_only_deathnotices "0"
 cl_drawhud_force_radar "0"
@@ -150,12 +150,12 @@ ui_steam_overlay_notification_position "topright"
 gameinstructor_enable "0"
 
 cl_autohelp "1"
-cl_showhelp "0"
+cl_showhelp "1"
 
 spec_replay_autostart "0"
 
-mapoverview_allow_client_draw "1"
-mapoverview_allow_grid_usage "1"
+mapoverview_allow_client_draw "0"
+mapoverview_allow_grid_usage "0"
 
 cl_playerspray_auto_apply "1"
 
@@ -229,11 +229,17 @@ unbindall
 alias "+jumpthrow" "-attack; +jump"
 alias "-jumpthrow" "-jump"
 
-alias "+showpos" "cl_showpos 1"		// "cl_crosshairsize 450"
-alias "-showpos" "cl_showpos 0"		// "cl_crosshairsize 4"
+// alias "+showpos" "cl_showpos 1; cl_crosshairsize 450"
+// alias "-showpos" "cl_showpos 0; cl_crosshairsize 4"
 
-alias "+where" "+use; gameinstructor_enable 1; +cl_show_team_equipment"
-alias "-where" "-use; gameinstructor_enable 0; -cl_show_team_equipment"
+alias "+showpos" "cl_showpos 1"
+alias "-showpos" "cl_showpos 0"
+
+// alias "+where" "+use; gameinstructor_enable 1; +cl_show_team_equipment"
+// alias "-where" "-use; gameinstructor_enable 0; -cl_show_team_equipment"
+
+alias "+where" "+use; +cl_show_team_equipment"
+alias "-where" "-use; -cl_show_team_equipment"
 
 bind "0" "slot10"
 bind "1" "slot1"
@@ -367,20 +373,20 @@ cl_allowupload "1"
 cl_disablefreezecam "1"
 cl_disablehtmlmotd "1"
 
-cl_forcepreload "1"
+cl_forcepreload "0"
 
 cl_freezecameffects_showholiday "0"
 
-cl_obs_interp_enable "0"
+cl_obs_interp_enable "1"
 cl_showpluginmessages2 "0"
 
-mat_queue_mode "2"
-engine_no_focus_sleep "0"
+mat_queue_mode "-1"
+engine_no_focus_sleep "50"
 
 lobby_default_privacy_bits1 "0"
 
-//cl_clanid "2456601"
-//cl_clanid "8291083"
+// cl_clanid "2456601"
+// cl_clanid "8291083"
 cl_clanid ""
 
 
