Changed cvars for debugging.

--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Aug. 06, 2018   |   "
+echo "   |   Aug. 07, 2018   |   "
 
 // Launch: -freq 144 -tickrate 128
 
@@ -30,7 +30,7 @@ cl_interp_ratio "1"
 volume "1"
 
 snd_mix_async "1"
-snd_mixahead "0.025"
+snd_mixahead "0.020"
 snd_mute_losefocus "0"
 
 snd_deathcamera_volume "0.0"
@@ -150,7 +150,7 @@ ui_steam_overlay_notification_position "topright"
 gameinstructor_enable "0"
 
 cl_autohelp "1"
-cl_showhelp "1"
+cl_showhelp "0"
 
 spec_replay_autostart "0"
 
@@ -232,9 +232,6 @@ alias "-jumpthrow" "-jump"
 // alias "+showpos" "cl_showpos 1; cl_crosshairsize 450"
 // alias "-showpos" "cl_showpos 0; cl_crosshairsize 4"
 
-alias "+showpos" "cl_showpos 1"
-alias "-showpos" "cl_showpos 0"
-
 // alias "+where" "+use; gameinstructor_enable 1; +cl_show_team_equipment"
 // alias "-where" "-use; gameinstructor_enable 0; -cl_show_team_equipment"
 
@@ -246,7 +243,7 @@ bind "1" "slot1"
 bind "2" "slot2"
 bind "3" "slot7"
 bind "4" "slot6"
-bind "5" "+showpos; slot8"
+bind "5" "slot8"
 bind "6" "slot5"
 bind "7" "slot5"
 bind "8" "slot4"
@@ -380,8 +377,8 @@ cl_freezecameffects_showholiday "0"
 cl_obs_interp_enable "1"
 cl_showpluginmessages2 "0"
 
-mat_queue_mode "-1"
-engine_no_focus_sleep "50"
+mat_queue_mode "2"
+engine_no_focus_sleep "0"
 
 lobby_default_privacy_bits1 "0"
 
