--- a/traindmawp.cfg
+++ b/traindmawp.cfg
@@ -43,6 +43,8 @@ mp_autokick 0
 mp_autoteambalance 0
 mp_limitteams 0
 
+mp_items_prohibited ""
+
 mp_t_default_primary "weapon_awp"
 mp_ct_default_primary "weapon_awp"
 mp_t_default_secondary "weapon_deagle"
