--- a/traindm.cfg
+++ b/traindm.cfg
@@ -43,6 +43,8 @@ mp_autokick 0
 mp_autoteambalance 0
 mp_limitteams 0
 
+mp_items_prohibited ""
+
 mp_t_default_primary "weapon_m4a1_silencer"
 mp_ct_default_primary "weapon_ak47"
 mp_t_default_secondary "weapon_deagle"
