Added +lookatweapon to V key.

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Aug. 07, 2018   |   "
+echo "   |   Aug. 17, 2018   |   "
 
 // Launch: -freq 144 -tickrate 128
 
@@ -269,7 +269,7 @@ bind "r" "+reload"
 bind "s" "+back"
 bind "t" "+where"
 bind "u" "messagemode2"
-bind "v" "toggle mat_monitorgamma 2.6 1.6; r_cleardecals"
+bind "v" "toggle mat_monitorgamma 2.6 1.6; r_cleardecals; +lookatweapon"
 bind "w" "+forward"
 bind "x" "radio2"
 bind "y" "messagemode"
