Mouse sensitivity toggle.
> How to kill muscle memory...

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Aug. 17, 2018   |   "
+echo "   |   Sep. 05, 2018   |   "
 
 // Launch: -freq 144 -tickrate 128
 
@@ -16,7 +16,7 @@ sdr ClientForceRelayCluster ""                  // sgp, tyo, hkg, lax, eat
 fps_max "500"
 fps_max_menu "120"
 
-rate "196608"
+rate "20480"
 cl_cmdrate "128"
 cl_updaterate "128"
 cl_interp "0"
@@ -31,7 +31,7 @@ volume "1"
 
 snd_mix_async "1"
 snd_mixahead "0.020"
-snd_mute_losefocus "0"
+snd_mute_losefocus "1"
 
 snd_deathcamera_volume "0.0"
 snd_mapobjective_volume "0.0"
@@ -250,16 +250,16 @@ bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "+spray_menu"
-bind "c" "radio3"
+bind "c" "toggle sensitivity 8.0 6.66 3.33 1.11"
 bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "toggle cl_radar_always_centered 0 1; toggle cl_radar_scale 0.3 0.7; toggle cl_righthand 1 0; toggle cl_teamid_overhead_always 2 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
-bind "i" "buyequip"
-bind "j" "impulse 100"
+unbind "i"
+bind "j" "radio3; impulse 200"
 bind "k" "+voicerecord"
-unbind "l"
+bind "l" "impulse 100"
 bind "m" "teammenu; say_team Mid"
 bind "n" "noclip"
 bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2; cl_crosshairdot 0; cl_crosshairgap -4; cl_crosshairgap_useweaponvalue 0"
@@ -295,7 +295,7 @@ bind "]" "toggle cl_crosshairgap 0 -1 1"
 unbind "SEMICOLON"
 unbind "'"
 bind "`" "toggleconsole"
-bind "," "buyammo1; buyammo2"
+unbind ","
 bind "." "toggle hud_scaling 0.5 0.95"
 bind "/" "toggle cl_hud_playercount_showcount 1 0"
 bind "\" "toggle cl_crosshairdot 0 1"
@@ -328,7 +328,7 @@ bind "UPARROW" "toggle cl_crosshaircolor 0 1"
 unbind "LEFTARROW"
 bind "DOWNARROW" "toggle cl_hud_color 0 1 2 3 4 5 6 7 8 9 10 11"
 unbind "RIGHTARROW"
-bind "F1" "use weapon_c4; drop; say_team Bomb dropped!"
+bind "F1" "use weapon_c4; drop"
 bind "F2" "slot9"
 bind "F3" "slot10"
 bind "F4" "say_team Bomb dropped!"
@@ -353,14 +353,15 @@ bind "MWHEELDOWN" "+jump"
 // Misc      //
 ///////////////
 
-developer "0"
+developer "1"
 
 con_enable "1"
 con_timestamp "0"
 
 con_filter_enable "2"
-con_filter_text "Damage"
-con_filter_text_out "Player:"
+con_filter_text "Mouse sensitivity."
+// con_filter_text "Damage"
+// con_filter_text_out "Player:"
 
 cl_downloadfilter "all"
 
