--- a/css.cfg
+++ b/css.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jun. 30, 2018   |   "
+echo "   |   Aug. 23, 2018   |   "
 
 ///////////////
 // Rates     //
@@ -178,19 +178,19 @@ bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "impulse 201"
-bind "c" "radio3"
+bind "c" "toggle sensitivity 8.0 6.66 3.33 1.11"
 bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "toggle cl_righthand 1 0"
 bind "g" "drop"
 bind "h" "say_team Drop"
 unbind "i"
-bind "j" "impulse 100"
+bind "j" "radio3; impulse 200"
 bind "k" "+voicerecord"
-unbind "l"
+bind "l" "impulse 100"
 bind "m" "chooseteam"
 bind "n" "nightvision"
-bind "o" "buyequip"
+unbind "o"
 unbind "p"
 bind "q" "+attack2"
 bind "r" "+reload"
@@ -256,7 +256,7 @@ unbind "UPARROW"
 unbind "LEFTARROW"
 unbind "DOWNARROW"
 unbind "RIGHTARROW"
-bind "F1" "use weapon_c4; drop; say_team Bomb dropped!"
+bind "F1" "use weapon_c4; drop"
 bind "F2" "rebuy"
 bind "F3" "say_team Bomb"
 bind "F4" "say_team Bomb dropped!"
@@ -266,7 +266,7 @@ bind "F7" "say_team Bomb go A"
 bind "F8" "say_team Bomb go B"
 bind "F9" "toggle net_graph 1 0"
 bind "F10" "quit"
-bind "F11" ""
+bind "F11" "exec css.cfg"
 bind "F12" "exec css.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "lastinv"
