--- a/traindmawp.cfg
+++ b/traindmawp.cfg
@@ -1,6 +1,6 @@
 echo
 echo "   ---------------------   "
-echo "   |   Aug. 17, 2018   |   "
+echo "   |   Aug. 23, 2018   |   "
 
 
 game_type 0
@@ -44,6 +44,7 @@ mp_autoteambalance 0
 mp_limitteams 0
 
 mp_items_prohibited ""
+mp_give_player_c4 0
 
 mp_t_default_primary "weapon_awp"
 mp_ct_default_primary "weapon_awp"
