--- a/dylancsgo.cfg
+++ b/dylancsgo.cfg
@@ -1,22 +1,22 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jun. 25, 2018   |   "
+echo "   |   Sep. 08, 2018   |   "
 
-// Launch: -novid -freq 144 -tickrate 128
+// Launch: -freq 75 -tickrate 128
 
 
 ///////////////
 // Rates     //
 ///////////////
 
-mm_dedicated_search_maxping "250.000000"
-net_client_steamdatagram_enable_override "0"
-sdr ClientForceRelayCluster "" // sgp, tyo, hkg, lax, eat
+mm_dedicated_search_maxping "350.000000"
+net_client_steamdatagram_enable_override "0"    // -1 = UDP, 0 = Auto, 1 = SDR
+sdr ClientForceRelayCluster ""                  // sgp, tyo, hkg, lax, eat
 
 fps_max "300"
 fps_max_menu "120"
 
-rate "196608"
+rate "20480"
 cl_cmdrate "128"
 cl_updaterate "128"
 cl_interp "0"
@@ -29,17 +29,14 @@ cl_interp_ratio "1"
 
 volume "1"
 
-//snd_updateaudiocache
-//snd_rebuildaudiocache
-
 snd_mix_async "1"
-snd_mixahead "0.02"
+snd_mixahead "0.025"
 snd_mute_losefocus "0"
 
-snd_musicvolume "0.0"
 snd_deathcamera_volume "0.0"
 snd_mapobjective_volume "0.0"
 snd_menumusic_volume "0.0"
+snd_mvp_volume "0.0"
 snd_roundend_volume "0.0"
 snd_roundstart_volume "0.0"
 snd_tensecondwarning_volume "0.0"
@@ -55,14 +52,13 @@ voice_modenable "1"
 voice_mixer_boost "0"
 voice_mixer_mute "0"
 voice_mixer_volume "1"
-voice_scale "0.1"
+voice_scale "0.3"
 
-windows_speaker_config "1"
+windows_speaker_config "0"
 dsp_enhance_stereo "0"
 
 snd_hrtf_distance_behind "100"
 
-lobby_voice_chat_enabled "0"
 cl_mute_all_but_friends_and_party "0"
 cl_mute_enemy_team "0"
 
@@ -89,14 +85,12 @@ cl_draw_only_deathnotices "0"
 cl_drawhud_force_radar "0"
 cl_drawhud_force_deathnotices "0"
 cl_showloadout "1"
-cl_loadout_colorweaponnames "1"
 
 cl_teammate_colors_show "1"
 cl_teamid_overhead_always "1"
-cl_teamid_overhead_name_alpha "245"
 
-cl_hud_bomb_under_radar "1"
-cl_hud_healthammo_style "0"
+cl_hud_bomb_under_radar "0"
+cl_hud_healthammo_style "1"
 
 cl_hud_playercount_pos "1"
 cl_hud_playercount_showcount "0"
@@ -160,8 +154,8 @@ cl_showhelp "0"
 
 spec_replay_autostart "0"
 
-mapoverview_allow_client_draw "1"
-mapoverview_allow_grid_usage "1"
+mapoverview_allow_client_draw "0"
+mapoverview_allow_grid_usage "0"
 
 cl_playerspray_auto_apply "1"
 
@@ -205,7 +199,6 @@ cl_crosshaircolor_b "50"
 sensitivity "3.33"
 zoom_sensitivity_ratio_mouse "1.0"
 
-cl_mouseenable "1"
 cl_mouselook "1"
 joystick "0"
 joystick_force_disabled "1"
@@ -236,11 +229,11 @@ unbindall
 alias "+jumpthrow" "-attack; +jump"
 alias "-jumpthrow" "-jump"
 
-alias "+showpos" "cl_showpos 1"		// "cl_crosshairsize 450"
-alias "-showpos" "cl_showpos 0"		// "cl_crosshairsize 4"
+// alias "+showpos" "cl_showpos 1; cl_crosshairsize 450"
+// alias "-showpos" "cl_showpos 0; cl_crosshairsize 4"
 
-alias "+where" "+use; gameinstructor_enable 1; +cl_show_team_equipment"
-alias "-where" "-use; gameinstructor_enable 0; -cl_show_team_equipment"
+// alias "+where" "+use; gameinstructor_enable 1; +cl_show_team_equipment"
+// alias "-where" "-use; gameinstructor_enable 0; -cl_show_team_equipment"
 
 bind "0" "slot10"
 bind "1" "slot1"
@@ -260,10 +253,10 @@ bind "e" "slot3"
 bind "f" "toggle cl_radar_always_centered 0 1; toggle cl_radar_scale 0.3 0.7; toggle cl_righthand 1 0; toggle cl_teamid_overhead_always 2 1"
 bind "g" "drop"
 unbind "h"
-bind "i" "buyequip"
-bind "j" "impulse 100"
+unbind "i"
+bind "j" "impulse 200"
 bind "k" "+voicerecord"
-unbind "l"
+bind "l" "impulse 100"
 bind "m" "teammenu"
 bind "n" "noclip"
 bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2.5; cl_crosshairdot 0; cl_crosshairgap -2; cl_crosshairgap_useweaponvalue 0"
@@ -271,9 +264,9 @@ bind "p" "cl_crosshairsize 1; cl_crosshairgap -1; cl_crosshairgap_useweaponvalue
 bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+back"
-bind "t" "+where"
+bind "t" "+use"
 bind "u" "messagemode2"
-bind "v" "toggle mat_monitorgamma 2.2 1.6; r_cleardecals"
+bind "v" "toggle mat_monitorgamma 2.2 1.6; r_cleardecals; +lookatweapon"
 bind "w" "+forward"
 bind "x" "radio2"
 bind "y" "messagemode"
@@ -299,12 +292,12 @@ bind "]" "toggle cl_crosshairgap 0 -1 1"
 unbind "SEMICOLON"
 unbind "'"
 bind "`" "toggleconsole"
-bind "," "buyammo1; buyammo2"
+unbind ","
 bind "." "toggle hud_scaling 0.5 0.95"
 bind "/" "toggle cl_hud_playercount_showcount 1 0"
 bind "\" "toggle cl_crosshairdot 0 1"
 bind "-" "toggle cl_crosshairsize 2 1 4"
-bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 3 1"
+bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 5 1"
 unbind "ENTER"
 bind "SPACE" "+jump"
 bind "BACKSPACE" "toggle cl_showpos 1 0"
@@ -313,7 +306,7 @@ bind "CAPSLOCK" "+speed"
 unbind "NUMLOCK"
 bind "ESCAPE" "cancelselect"
 unbind "INS"
-bind "HOME" "voice_enable 1; voice_scale 0.1; echo - Voice: 10%"
+unbind "HOME"
 unbind "PGUP"
 unbind "DEL"
 unbind "END"
@@ -328,9 +321,9 @@ bind "RCTRL" "toggle safezonex 1 0.2"
 bind "LWIN" "say Windows key pressed."
 bind "RWIN" "say Windows key pressed."
 bind "APP" "say App key pressed."
-unbind "UPARROW"
+bind "UPARROW" "toggle cl_crosshaircolor 0 1"
 unbind "LEFTARROW"
-unbind "DOWNARROW"
+bind "DOWNARROW" "toggle cl_hud_color 0 1 2 3 4 5 6 7 8 9 10 11"
 unbind "RIGHTARROW"
 bind "F1" "use weapon_c4; drop"
 bind "F2" "slot9"
@@ -342,7 +335,7 @@ unbind "F7"
 unbind "F8"
 bind "F9" "toggle net_graph 1 0"
 bind "F10" "quit prompt"
-unbind "F11"
+bind "F11" "exec dylancsgo.cfg"
 bind "F12" "exec dylancsgo.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
@@ -360,7 +353,7 @@ bind "MWHEELDOWN" "+jump"
 developer "0"
 
 con_enable "1"
-con_timestamp "1"
+con_timestamp "0"
 
 con_filter_enable "2"
 con_filter_text "Damage"
@@ -374,12 +367,12 @@ cl_allowupload "1"
 cl_disablefreezecam "1"
 cl_disablehtmlmotd "1"
 
-cl_forcepreload "1"
+cl_forcepreload "0"
 
 cl_freezecameffects_showholiday "0"
 
-cl_obs_interp_enable "0"
-cl_showpluginmessages "1"
+cl_obs_interp_enable "1"
+cl_showpluginmessages2 "0"
 
 mat_queue_mode "2"
 engine_no_focus_sleep "0"
