Added optimizations for testing.

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Sep. 10, 2018   |   "
+echo "   |   Sep. 24, 2018   |   "
 
-// Launch: -freq 144 -tickrate 128
+// Launch: -freq 144 -tickrate 128 -nod3d9ex -no-browser -nojoy +snd_use_hrtf 0
 
 
 ///////////////
@@ -16,7 +16,7 @@ sdr ClientForceRelayCluster ""                  // sgp, tyo, hkg, lax, eat
 fps_max "500"
 fps_max_menu "120"
 
-rate "20480"
+rate "98304"
 cl_cmdrate "128"
 cl_updaterate "128"
 cl_interp "0"
@@ -56,6 +56,7 @@ voice_scale "0.1"
 
 windows_speaker_config "0"
 dsp_enhance_stereo "0"
+snd_hwcompat "1"
 
 snd_hrtf_distance_behind "100"
 
