--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Sep. 24, 2018   |   "
+echo "   |   Sep. 28, 2018   |   "
 
 // Launch: -freq 144 -tickrate 128 -nod3d9ex -no-browser -nojoy +snd_use_hrtf 0
 
@@ -14,7 +14,7 @@ net_client_steamdatagram_enable_override "0"    // -1 = UDP, 0 = Auto, 1 = SDR
 sdr ClientForceRelayCluster ""                  // sgp, tyo, hkg, lax, eat
 
 fps_max "500"
-fps_max_menu "120"
+fps_max_menu "240"
 
 rate "98304"
 cl_cmdrate "128"
@@ -180,9 +180,9 @@ cl_crosshair_dynamic_splitdist "3"
 cl_crosshair_t "0"
 cl_crosshairdot "1"
 cl_crosshairgap "1"
-cl_crosshairgap_useweaponvalue "1"
+cl_crosshairgap_useweaponvalue "0"
 cl_crosshairstyle "5"
-cl_crosshairsize "4"
+cl_crosshairsize "4.5"
 cl_crosshairscale "0"
 cl_crosshairthickness "0.5"
 cl_crosshairalpha "200"
@@ -231,7 +231,7 @@ alias "+jumpthrow" "-attack; +jump"
 alias "-jumpthrow" "-jump"
 
 // alias "+showpos" "cl_showpos 1; cl_crosshairsize 450"
-// alias "-showpos" "cl_showpos 0; cl_crosshairsize 4"
+// alias "-showpos" "cl_showpos 0; cl_crosshairsize 4.5"
 
 // alias "+where" "+use; gameinstructor_enable 1; +cl_show_team_equipment"
 // alias "-where" "-use; gameinstructor_enable 0; -cl_show_team_equipment"
@@ -251,7 +251,7 @@ bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "+spray_menu"
-bind "c" "toggle sensitivity 8.0 6.66 3.33 1.11"
+bind "c" "toggle sensitivity 8.0 3.33"
 bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "toggle cl_radar_always_centered 0 1; toggle cl_radar_scale 0.3 0.7; toggle cl_righthand 1 0; toggle cl_teamid_overhead_always 2 1"
@@ -300,7 +300,7 @@ unbind ","
 bind "." "toggle hud_scaling 0.5 0.95"
 bind "/" "toggle cl_hud_playercount_showcount 1 0"
 bind "\" "toggle cl_crosshairdot 0 1"
-bind "-" "toggle cl_crosshairsize 2 1 4"
+bind "-" "toggle cl_crosshairsize 2 1 4.5"
 bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 5 1"
 unbind "ENTER"
 bind "SPACE" "+jump"
@@ -354,7 +354,7 @@ bind "MWHEELDOWN" "+jump"
 // Misc      //
 ///////////////
 
-developer "1"
+developer "0"
 
 con_enable "1"
 con_timestamp "0"
