Testing UDP vs SDR.
Changed multiple key bindings.

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Sep. 28, 2018   |   "
+echo "   |   Oct. 01, 2018   |   "
 
-// Launch: -freq 144 -tickrate 128 -nod3d9ex -no-browser -nojoy +snd_use_hrtf 0
+// Launch: -freq 144 -tickrate 128
 
 
 ///////////////
@@ -10,13 +10,13 @@ echo "   |   Sep. 28, 2018   |   "
 ///////////////
 
 mm_dedicated_search_maxping "350.000000"
-net_client_steamdatagram_enable_override "0"    // -1 = UDP, 0 = Auto, 1 = SDR
+net_client_steamdatagram_enable_override "-1"    // -1 = UDP, 0 = Auto, 1 = SDR
 sdr ClientForceRelayCluster ""                  // sgp, tyo, hkg, lax, eat
 
 fps_max "500"
 fps_max_menu "240"
 
-rate "98304"
+rate "196608"
 cl_cmdrate "128"
 cl_updaterate "128"
 cl_interp "0"
@@ -56,7 +56,7 @@ voice_scale "0.1"
 
 windows_speaker_config "0"
 dsp_enhance_stereo "0"
-snd_hwcompat "1"
+snd_hwcompat "0"
 
 snd_hrtf_distance_behind "100"
 
@@ -117,7 +117,7 @@ cpu_frequency_monitoring "0"
 // UI        //
 ///////////////
 
-mat_monitorgamma "1.600000"
+mat_monitorgamma "2.600000"
 
 viewmodel_fov "60"
 viewmodel_offset_x "1"
@@ -230,15 +230,6 @@ unbindall
 alias "+jumpthrow" "-attack; +jump"
 alias "-jumpthrow" "-jump"
 
-// alias "+showpos" "cl_showpos 1; cl_crosshairsize 450"
-// alias "-showpos" "cl_showpos 0; cl_crosshairsize 5.5"
-
-// alias "+where" "+use; gameinstructor_enable 1; +cl_show_team_equipment"
-// alias "-where" "-use; gameinstructor_enable 0; -cl_show_team_equipment"
-
-alias "+where" "+use; +cl_show_team_equipment"
-alias "-where" "-use; -cl_show_team_equipment"
-
 bind "0" "slot10"
 bind "1" "slot1"
 bind "2" "slot2"
@@ -263,14 +254,14 @@ bind "k" "+voicerecord"
 bind "l" "impulse 100"
 bind "m" "teammenu; say_team Mid"
 bind "n" "noclip"
-bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2; cl_crosshairdot 0; cl_crosshairgap -4; cl_crosshairgap_useweaponvalue 0"
-bind "p" "cl_crosshairsize 1; cl_crosshairgap -1; cl_crosshairgap_useweaponvalue 0"
+bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2; cl_crosshairdot 0; cl_crosshairgap -4"
+bind "p" "cl_crosshairsize 1; cl_crosshairgap -1"
 bind "q" "+attack2"
 bind "r" "+reload"
 bind "s" "+back"
-bind "t" "+where"
+bind "t" "+use"
 bind "u" "messagemode2"
-bind "v" "toggle mat_monitorgamma 2.6 1.6; r_cleardecals; +lookatweapon"
+bind "v" "r_cleardecals; +lookatweapon"
 bind "w" "+forward"
 bind "x" "radio2"
 bind "y" "messagemode"
@@ -291,12 +282,12 @@ bind "KP_MULTIPLY" "say_team Right ->"
 bind "KP_MINUS" "say_team Upper"
 bind "KP_PLUS" "say_team Lower"
 bind "KP_ENTER" "buymenu"
-bind "[" "toggle cl_crosshairgap_useweaponvalue 0 1"
+bind "[" "toggle cl_crosshair_sniper_width 2 1"
 bind "]" "toggle cl_crosshairgap 0 -1 1"
 unbind "SEMICOLON"
 unbind "'"
 bind "`" "toggleconsole"
-unbind ","
+bind "," "toggle mat_monitorgamma 1.6 2.6"
 bind "." "toggle hud_scaling 0.5 0.95"
 bind "/" "toggle cl_hud_playercount_showcount 1 0"
 bind "\" "toggle cl_crosshairdot 0 1"
@@ -360,9 +351,8 @@ con_enable "1"
 con_timestamp "0"
 
 con_filter_enable "2"
-con_filter_text "Mouse sensitivity."
-// con_filter_text "Damage"
-// con_filter_text_out "Player:"
+con_filter_text "Damage"
+con_filter_text_out "Player:"
 
 cl_downloadfilter "all"
 
