--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Oct. 04, 2018   |   "
+echo "   |   Oct. 10, 2018   |   "
 
 // Launch: -freq 144 -tickrate 128
 
@@ -53,6 +53,7 @@ voice_mixer_boost "0"
 voice_mixer_mute "0"
 voice_mixer_volume "1"
 voice_scale "0.1"
+voice_positional "1"
 
 dsp_enhance_stereo "0"
 snd_hwcompat "0"
