--- a/dylancsgo.cfg
+++ b/dylancsgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Sep. 08, 2018   |   "
+echo "   |   Nov. 11, 2018   |   "
 
 // Launch: -freq 75 -tickrate 128
 
@@ -46,20 +46,21 @@ snd_rear_headphone_position "90.000000"
 snd_headphone_pan_exponent "1.0"
 snd_headphone_pan_radial_weight "1.0"
 
-voice_enable "1"
+voice_enable "0"
 voice_forcemicrecord "1"
 voice_modenable "1"
 voice_mixer_boost "0"
 voice_mixer_mute "0"
-voice_mixer_volume "1"
+voice_mixer_volume "1.0"
 voice_scale "0.3"
+voice_positional "1"
 
-windows_speaker_config "0"
 dsp_enhance_stereo "0"
+snd_hwcompat "0"
 
 snd_hrtf_distance_behind "100"
 
-cl_mute_all_but_friends_and_party "0"
+cl_mute_all_but_friends_and_party "1"
 cl_mute_enemy_team "0"
 
 
@@ -179,9 +180,9 @@ cl_crosshair_dynamic_splitdist "3"
 cl_crosshair_t "0"
 cl_crosshairdot "1"
 cl_crosshairgap "1"
-cl_crosshairgap_useweaponvalue "1"
+cl_crosshairgap_useweaponvalue "0"
 cl_crosshairstyle "5"
-cl_crosshairsize "4"
+cl_crosshairsize "4.5"
 cl_crosshairscale "0"
 cl_crosshairthickness "0.5"
 cl_crosshairalpha "200"
@@ -196,7 +197,7 @@ cl_crosshaircolor_b "50"
 // Mouse     //
 ///////////////
 
-sensitivity "3.33"
+sensitivity "2.664"
 zoom_sensitivity_ratio_mouse "1.0"
 
 cl_mouselook "1"
@@ -229,12 +230,6 @@ unbindall
 alias "+jumpthrow" "-attack; +jump"
 alias "-jumpthrow" "-jump"
 
-// alias "+showpos" "cl_showpos 1; cl_crosshairsize 450"
-// alias "-showpos" "cl_showpos 0; cl_crosshairsize 4"
-
-// alias "+where" "+use; gameinstructor_enable 1; +cl_show_team_equipment"
-// alias "-where" "-use; gameinstructor_enable 0; -cl_show_team_equipment"
-
 bind "0" "slot10"
 bind "1" "slot1"
 bind "2" "slot2"
@@ -259,14 +254,14 @@ bind "k" "+voicerecord"
 bind "l" "impulse 100"
 bind "m" "teammenu"
 bind "n" "noclip"
-bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2.5; cl_crosshairdot 0; cl_crosshairgap -2; cl_crosshairgap_useweaponvalue 0"
-bind "p" "cl_crosshairsize 1; cl_crosshairgap -1; cl_crosshairgap_useweaponvalue 0"
+unbind "o"
+unbind "p"
 bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+back"
 bind "t" "+use"
 bind "u" "messagemode2"
-bind "v" "toggle mat_monitorgamma 2.2 1.6; r_cleardecals; +lookatweapon"
+bind "v" "r_cleardecals; +lookatweapon"
 bind "w" "+forward"
 bind "x" "radio2"
 bind "y" "messagemode"
@@ -287,17 +282,17 @@ unbind "KP_MULTIPLY"
 unbind "KP_MINUS"
 unbind "KP_PLUS"
 bind "KP_ENTER" "buymenu"
-bind "[" "toggle cl_crosshairgap_useweaponvalue 0 1"
-bind "]" "toggle cl_crosshairgap 0 -1 1"
+unbind "["
+unbind "]"
 unbind "SEMICOLON"
 unbind "'"
 bind "`" "toggleconsole"
 unbind ","
-bind "." "toggle hud_scaling 0.5 0.95"
-bind "/" "toggle cl_hud_playercount_showcount 1 0"
-bind "\" "toggle cl_crosshairdot 0 1"
-bind "-" "toggle cl_crosshairsize 2 1 4"
-bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 5 1"
+unbind "."
+unbind "/"
+unbind "\"
+unbind "-"
+unbind "="
 unbind "ENTER"
 bind "SPACE" "+jump"
 bind "BACKSPACE" "toggle cl_showpos 1 0"
@@ -317,15 +312,15 @@ unbind "RSHIFT"
 bind "ALT" "+jumpthrow"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
-bind "RCTRL" "toggle safezonex 1 0.2"
+unbind "RCTRL"
 bind "LWIN" "say Windows key pressed."
 bind "RWIN" "say Windows key pressed."
 bind "APP" "say App key pressed."
-bind "UPARROW" "toggle cl_crosshaircolor 0 1"
+unbind "UPARROW"
 unbind "LEFTARROW"
-bind "DOWNARROW" "toggle cl_hud_color 0 1 2 3 4 5 6 7 8 9 10 11"
+unbind "DOWNARROW"
 unbind "RIGHTARROW"
-bind "F1" "use weapon_c4; drop"
+unbind "F1"
 bind "F2" "slot9"
 bind "F3" "slot10"
 unbind "F4"
@@ -376,6 +371,8 @@ cl_showpluginmessages2 "0"
 
 mat_queue_mode "2"
 engine_no_focus_sleep "0"
+
+lobby_default_privacy_bits1 "0"
 
 cl_clanid "2456601"
 //cl_clanid "8291083"
