Changed scoreboard mouse bind.

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Nov. 07, 2018   |   "
+echo "   |   Nov. 29, 2018   |   "
 
-// Launch: -freq 144 -tickrate 128
+// Launch: -freq 144 -no-browser -nojoy -tickrate 128
 
 
 ///////////////
@@ -14,7 +14,7 @@ net_client_steamdatagram_enable_override "-1"    // -1 = UDP, 0 = Auto, 1 = SDR
 sdr ClientForceRelayCluster ""                  // sgp, tyo, hkg, lax, eat
 
 fps_max "500"
-fps_max_menu "240"
+fps_max_menu "120"
 
 rate "196608"
 cl_cmdrate "128"
@@ -94,7 +94,7 @@ cl_hud_bomb_under_radar "0"
 cl_hud_healthammo_style "1"
 
 cl_hud_playercount_pos "1"
-cl_hud_playercount_showcount "0"
+cl_hud_playercount_showcount "1"
 cl_color "3"
 
 cl_hud_color "1"
@@ -145,7 +145,7 @@ cl_righthand "1"
 closeonbuy "1"
 cl_use_opens_buy_menu "0"
 
-cl_scoreboard_mouse_enable_binding "radio1"
+cl_scoreboard_mouse_enable_binding "+attack2"
 
 ui_steam_overlay_notification_position "topright"
 gameinstructor_enable "0"
@@ -354,7 +354,7 @@ con_filter_enable "2"
 con_filter_text "Damage"
 con_filter_text_out "Player:"
 
-cl_downloadfilter "all"
+cl_downloadfilter "none"
 
 cl_allowdownload "1"
 cl_allowupload "1"
