--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Nov. 29, 2018   |   "
+echo "   |   Dec. 01, 2018   |   "
 
 // Launch: -freq 144 -no-browser -nojoy -tickrate 128
 
@@ -146,6 +146,7 @@ closeonbuy "1"
 cl_use_opens_buy_menu "0"
 
 cl_scoreboard_mouse_enable_binding "+attack2"
+cl_scoreboard_survivors_always_on "1"
 
 ui_steam_overlay_notification_position "topright"
 gameinstructor_enable "0"
