--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Dec. 01, 2018   |   "
+echo "   |   Dec. 08, 2018   |   "
 
 // Launch: -freq 144 -no-browser -nojoy -tickrate 128
 
@@ -243,15 +243,15 @@ bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "+spray_menu"
-bind "c" "toggle sensitivity 1.11 3.33"
+bind "c" "radio3"
 bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "toggle cl_radar_always_centered 0 1; toggle cl_radar_scale 0.3 0.7; toggle cl_righthand 1 0; toggle cl_teamid_overhead_always 2 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
 unbind "i"
-bind "j" "radio3; impulse 200"
-bind "k" "+voicerecord"
+bind "j" "impulse 200"
+bind "k" "bind c +voicerecord"
 bind "l" "impulse 100"
 bind "m" "teammenu; say_team Mid"
 bind "n" "noclip"
@@ -314,9 +314,9 @@ bind "ALT" "+jumpthrow"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
 bind "RCTRL" "toggle safezonex 1 0.2"
-bind "LWIN" "say Windows key pressed."
-bind "RWIN" "say Windows key pressed."
-bind "APP" "say App key pressed."
+unbind "LWIN"
+unbind "RWIN"
+unbind "APP"
 bind "UPARROW" "toggle cl_crosshaircolor 0 1"
 unbind "LEFTARROW"
 bind "DOWNARROW" "toggle cl_hud_color 0 1 2 3 4 5 6 7 8 9 10 11"
