Updated Napkin configs.
+voicerecord bind.
taser buy bind.
Cleaned up unused keys.

--- a/csgo.cfg
+++ b/csgo.cfg
@@ -275,7 +275,7 @@ bind "KP_PGDN" "buy smokegrenade"
 bind "KP_LEFTARROW" "buy molotov; buy incgrenade"
 bind "KP_5" "buy decoy"
 bind "KP_RIGHTARROW" "buy defuser"
-bind "KP_HOME" "buy taser 34"
+bind "KP_HOME" "buy taser"
 bind "KP_UPARROW" "autobuy"
 bind "KP_PGUP" "rebuy"
 bind "KP_SLASH" "say_team <- Left"
@@ -307,7 +307,7 @@ bind "PGUP" "voice_enable 1; voice_scale 0.75; echo - Voice: 75%"
 bind "DEL" "volume 0; echo - Volume: 0%"
 bind "END" "volume 0.2; echo - Volume: 20%"
 bind "PGDN" "volume 1; echo - Volume: 100%"
-bind "PAUSE" "pause"
+unbind "PAUSE"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
 bind "ALT" "+jumpthrow"
