--- a/napkincsgo.cfg
+++ b/napkincsgo.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   May. 06, 2018   |   "
+echo "   |   Dec. 08, 2018   |   "
 
-// Launch: -high -novid +mat_software_aa_strength 0
+// Launch: -no-browser -nojoy +mat_software_aa_strength 0
 
 
 ///////////////
@@ -29,17 +29,14 @@ cl_interp_ratio "1"
 
 volume "1"
 
-//snd_updateaudiocache
-//snd_rebuildaudiocache
-
 snd_mix_async "1"
-snd_mixahead "0.02"
+snd_mixahead "0.020"
 snd_mute_losefocus "0"
 
-snd_musicvolume "0.0"
 snd_deathcamera_volume "0.0"
 snd_mapobjective_volume "0.0"
 snd_menumusic_volume "0.0"
+snd_mvp_volume "0.0"
 snd_roundend_volume "0.0"
 snd_roundstart_volume "0.0"
 snd_tensecondwarning_volume "0.0"
@@ -54,15 +51,15 @@ voice_forcemicrecord "1"
 voice_modenable "1"
 voice_mixer_boost "0"
 voice_mixer_mute "0"
-voice_mixer_volume "1"
+voice_mixer_volume "1.0"
 voice_scale "0.1"
+voice_positional "1"
 
-windows_speaker_config "1"
 dsp_enhance_stereo "0"
+snd_hwcompat "0"
 
 snd_hrtf_distance_behind "100"
 
-lobby_voice_chat_enabled "1"
 cl_mute_all_but_friends_and_party "0"
 cl_mute_enemy_team "0"
 
@@ -89,14 +86,12 @@ cl_draw_only_deathnotices "0"
 cl_drawhud_force_radar "0"
 cl_drawhud_force_deathnotices "0"
 cl_showloadout "1"
-cl_loadout_colorweaponnames "1"
 
 cl_teammate_colors_show "1"
 cl_teamid_overhead_always "1"
-cl_teamid_overhead_name_alpha "245"
 
-cl_hud_bomb_under_radar "1"
-cl_hud_healthammo_style "0"
+cl_hud_bomb_under_radar "0"
+cl_hud_healthammo_style "1"
 
 cl_hud_playercount_pos "1"
 cl_hud_playercount_showcount "1"
@@ -122,7 +117,7 @@ cpu_frequency_monitoring "0"
 // UI        //
 ///////////////
 
-mat_monitorgamma "1.600000"
+mat_monitorgamma "2.000000"
 
 viewmodel_fov "60"
 viewmodel_offset_x "1"				// "2.5"
@@ -150,7 +145,8 @@ cl_righthand "1"
 closeonbuy "1"
 cl_use_opens_buy_menu "0"
 
-cl_scoreboard_mouse_enable_binding "radio1"
+cl_scoreboard_mouse_enable_binding "+attack2"
+cl_scoreboard_survivors_always_on "1"
 
 ui_steam_overlay_notification_position "topright"
 gameinstructor_enable "0"
@@ -160,8 +156,8 @@ cl_showhelp "0"
 
 spec_replay_autostart "0"
 
-mapoverview_allow_client_draw "1"
-mapoverview_allow_grid_usage "1"
+mapoverview_allow_client_draw "0"
+mapoverview_allow_grid_usage "0"
 
 cl_playerspray_auto_apply "1"
 
@@ -185,9 +181,9 @@ cl_crosshair_dynamic_splitdist "3"
 cl_crosshair_t "0"
 cl_crosshairdot "1"
 cl_crosshairgap "1"
-cl_crosshairgap_useweaponvalue "1"
+cl_crosshairgap_useweaponvalue "0"
 cl_crosshairstyle "5"
-cl_crosshairsize "6"
+cl_crosshairsize "5.5"
 cl_crosshairscale "0"
 cl_crosshairthickness "0.5"
 cl_crosshairalpha "200"
@@ -205,7 +201,6 @@ cl_crosshaircolor_b "50"
 sensitivity "3.33"
 zoom_sensitivity_ratio_mouse "1.0"
 
-cl_mouseenable "1"
 cl_mouselook "1"
 joystick "0"
 joystick_force_disabled "1"
@@ -236,44 +231,38 @@ unbindall
 alias "+jumpthrow" "-attack; +jump"
 alias "-jumpthrow" "-jump"
 
-alias "+showpos" "cl_showpos 1"		// "cl_crosshairsize 450"
-alias "-showpos" "cl_showpos 0"		// "cl_crosshairsize 6"
-
-alias "+where" "+use; gameinstructor_enable 1; +cl_show_team_equipment"
-alias "-where" "-use; gameinstructor_enable 0; -cl_show_team_equipment"
-
 bind "0" "slot10"
 bind "1" "slot1"
 bind "2" "slot2"
 bind "3" "slot7"
 bind "4" "slot6"
-bind "5" "+showpos; slot8"
+bind "5" "slot8"
 bind "6" "slot5"
 bind "7" "slot5"
 bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "+spray_menu"
-bind "c" "radio3"
+bind "c" "+voicerecord"
 bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "toggle cl_radar_always_centered 0 1; toggle cl_radar_scale 0.3 0.7; toggle cl_righthand 1 0; toggle cl_teamid_overhead_always 2 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
-bind "i" "buyequip"
-bind "j" "impulse 100"
-bind "k" "+voicerecord"
-unbind "l"
+unbind "i"
+bind "j" "radio3; impulse 200"
+unbind "k"
+bind "l" "impulse 100"
 bind "m" "teammenu"
 bind "n" "noclip"
-bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2; cl_crosshairdot 0; cl_crosshairgap -4; cl_crosshairgap_useweaponvalue 0"
-bind "p" "cl_crosshairsize 1; cl_crosshairgap -1; cl_crosshairgap_useweaponvalue 0"
+bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2; cl_crosshairdot 0; cl_crosshairgap -4"
+bind "p" "cl_crosshairsize 1; cl_crosshairgap -1"
 bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+back"
-bind "t" "+where"
+bind "t" "+use"
 bind "u" "messagemode2"
-bind "v" "+voicerecord"
+bind "v" "r_cleardecals; +lookatweapon"
 bind "w" "+forward"
 bind "x" "radio2"
 bind "y" "messagemode"
@@ -286,7 +275,7 @@ bind "KP_PGDN" "buy smokegrenade"
 bind "KP_LEFTARROW" "buy molotov; buy incgrenade"
 bind "KP_5" "buy decoy"
 bind "KP_RIGHTARROW" "buy defuser"
-bind "KP_HOME" "buy taser 34"
+bind "KP_HOME" "buy taser"
 bind "KP_UPARROW" "autobuy"
 bind "KP_PGUP" "rebuy"
 bind "KP_SLASH" "say_team <- Left"
@@ -294,17 +283,17 @@ bind "KP_MULTIPLY" "say_team Right ->"
 bind "KP_MINUS" "say_team Upper"
 bind "KP_PLUS" "say_team Lower"
 bind "KP_ENTER" "buymenu"
-bind "[" "toggle cl_crosshairgap_useweaponvalue 0 1"
+bind "[" "toggle cl_crosshair_sniper_width 2 1"
 bind "]" "toggle cl_crosshairgap 0 -1 1"
 unbind "SEMICOLON"
 unbind "'"
 bind "`" "toggleconsole"
-bind "," "buyammo1; buyammo2"
+bind "," "toggle mat_monitorgamma 1.6 2.6"
 bind "." "toggle hud_scaling 0.5 0.95"
 bind "/" "toggle cl_hud_playercount_showcount 1 0"
 bind "\" "toggle cl_crosshairdot 0 1"
-bind "-" "toggle cl_crosshairsize 2 1 6"
-bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 3 1"
+bind "-" "toggle cl_crosshairsize 2 1 5.5"
+bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 5 1"
 unbind "ENTER"
 bind "SPACE" "+jump"
 bind "BACKSPACE" "toggle cl_showpos 1 0"
@@ -318,21 +307,21 @@ bind "PGUP" "voice_enable 1; voice_scale 0.5; echo - Voice: 50%"
 bind "DEL" "volume 0; echo - Volume: 0%"
 bind "END" "volume 0.2; echo - Volume: 20%"
 bind "PGDN" "volume 1; echo - Volume: 100%"
-bind "PAUSE" "pause"
+unbind "PAUSE"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
 bind "ALT" "+jumpthrow"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
 bind "RCTRL" "toggle safezonex 1 0.2"
-bind "LWIN" "say Windows key pressed."
-bind "RWIN" "say Windows key pressed."
-bind "APP" "say App key pressed."
-unbind "UPARROW"
+unbind "LWIN"
+unbind "RWIN"
+unbind "APP"
+bind "UPARROW" "toggle cl_crosshaircolor 0 1"
 unbind "LEFTARROW"
-unbind "DOWNARROW"
+bind "DOWNARROW" "toggle cl_hud_color 0 1 2 3 4 5 6 7 8 9 10 11"
 unbind "RIGHTARROW"
-bind "F1" "use weapon_c4; drop; say_team Bomb dropped!"
+bind "F1" "use weapon_c4; drop"
 bind "F2" "slot9"
 bind "F3" "slot10"
 bind "F4" "say_team Bomb dropped!"
@@ -348,7 +337,7 @@ bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE3" "+lookatweapon"
 bind "MOUSE4" "lastinv"
-bind "MOUSE5" "toggle mat_monitorgamma 2.6 1.6; r_cleardecals"
+bind "MOUSE5" "lastinv"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
@@ -360,7 +349,7 @@ bind "MWHEELDOWN" "+jump"
 developer "0"
 
 con_enable "1"
-con_timestamp "1"
+con_timestamp "0"
 
 con_filter_enable "2"
 con_filter_text "Damage"
@@ -374,15 +363,17 @@ cl_allowupload "1"
 cl_disablefreezecam "1"
 cl_disablehtmlmotd "1"
 
-cl_forcepreload "1"
+cl_forcepreload "0"
 
 cl_freezecameffects_showholiday "0"
 
-cl_obs_interp_enable "0"
-cl_showpluginmessages "1"
+cl_obs_interp_enable "1"
+cl_showpluginmessages2 "0"
 
 mat_queue_mode "2"
 engine_no_focus_sleep "0"
+
+lobby_default_privacy_bits1 "0"
 
 cl_clanid "2456601"
 //cl_clanid "8291083"
