--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Dec. 08, 2018   |   "
+echo "   |   Dec. 18, 2018   |   "
 
-// Launch: -freq 144 -no-browser -nojoy -tickrate 128
+// Launch: -freq 144 -threads 8 -no-browser -nojoy -tickrate 128
 
 
 ///////////////
@@ -13,7 +13,7 @@ mm_dedicated_search_maxping "350.000000"
 net_client_steamdatagram_enable_override "-1"    // -1 = UDP, 0 = Auto, 1 = SDR
 sdr ClientForceRelayCluster ""                  // sgp, tyo, hkg, lax, eat
 
-fps_max "500"
+fps_max "300"
 fps_max_menu "120"
 
 rate "196608"
@@ -33,13 +33,14 @@ snd_mix_async "1"
 snd_mixahead "0.020"
 snd_mute_losefocus "1"
 
-snd_deathcamera_volume "0.0"
-snd_mapobjective_volume "0.0"
-snd_menumusic_volume "0.0"
-snd_mvp_volume "0.0"
-snd_roundend_volume "0.0"
-snd_roundstart_volume "0.0"
-snd_tensecondwarning_volume "0.0"
+snd_deathcamera_volume "0.000000"
+snd_dzmusic_volume "0.000000"
+snd_mapobjective_volume "0.000000"
+snd_menumusic_volume "0.000000"
+snd_mvp_volume "0.000000"
+snd_roundend_volume "0.000000"
+snd_roundstart_volume "0.000000"
+snd_tensecondwarning_volume "0.000000"
 
 snd_front_headphone_position "90.000000"
 snd_rear_headphone_position "90.000000"
@@ -377,7 +378,7 @@ lobby_default_privacy_bits1 "0"
 
 // cl_clanid "2456601"
 // cl_clanid "8291083"
-cl_clanid ""
+cl_clanid "0"
 
 
 ///////////////
