--- a/napkincsgo.cfg
+++ b/napkincsgo.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Dec. 08, 2018   |   "
+echo "   |   Dec. 26, 2018   |   "
 
-// Launch: -no-browser -nojoy +mat_software_aa_strength 0
+// Launch: -freq 240 +mat_software_aa_strength 0
 
 
 ///////////////
@@ -10,8 +10,8 @@ echo "   |   Dec. 08, 2018   |   "
 ///////////////
 
 mm_dedicated_search_maxping "240.000000"
-net_client_steamdatagram_enable_override "0"
-sdr ClientForceRelayCluster "" // sgp, tyo, hkg, lax, eat
+net_client_steamdatagram_enable_override "0"    // -1 = UDP, 0 = Auto, 1 = SDR
+sdr ClientForceRelayCluster ""                  // sgp, tyo, hkg, lax, eat, ord
 
 fps_max "300"
 fps_max_menu "120"
@@ -33,13 +33,14 @@ snd_mix_async "1"
 snd_mixahead "0.020"
 snd_mute_losefocus "0"
 
-snd_deathcamera_volume "0.0"
-snd_mapobjective_volume "0.0"
-snd_menumusic_volume "0.0"
-snd_mvp_volume "0.0"
-snd_roundend_volume "0.0"
-snd_roundstart_volume "0.0"
-snd_tensecondwarning_volume "0.0"
+snd_deathcamera_volume "0.000000"
+snd_dzmusic_volume "0.000000"
+snd_mapobjective_volume "0.000000"
+snd_menumusic_volume "0.000000"
+snd_mvp_volume "0.000000"
+snd_roundend_volume "0.000000"
+snd_roundstart_volume "0.000000"
+snd_tensecondwarning_volume "0.000000"
 
 snd_front_headphone_position "90.000000"
 snd_rear_headphone_position "90.000000"
@@ -231,12 +232,15 @@ unbindall
 alias "+jumpthrow" "-attack; +jump"
 alias "-jumpthrow" "-jump"
 
+alias "+robocop" "cl_crosshairsize 450"
+alias "-robocop" "cl_crosshairsize 5.5"
+
 bind "0" "slot10"
 bind "1" "slot1"
 bind "2" "slot2"
 bind "3" "slot7"
 bind "4" "slot6"
-bind "5" "slot8"
+bind "5" "+robocop; slot8"
 bind "6" "slot5"
 bind "7" "slot5"
 bind "8" "slot4"
@@ -246,7 +250,7 @@ bind "b" "+spray_menu"
 bind "c" "+voicerecord"
 bind "d" "+moveright"
 bind "e" "slot3"
-bind "f" "toggle cl_radar_always_centered 0 1; toggle cl_radar_scale 0.3 0.7; toggle cl_righthand 1 0; toggle cl_teamid_overhead_always 2 1"
+bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_teamid_overhead_always 1 2 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
 unbind "i"
@@ -337,7 +341,7 @@ bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE3" "+lookatweapon"
 bind "MOUSE4" "lastinv"
-bind "MOUSE5" "lastinv"
+bind "MOUSE5" "invnext"                 // "toggle voice_enable 0 1"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
@@ -376,8 +380,7 @@ engine_no_focus_sleep "0"
 lobby_default_privacy_bits1 "0"
 
 cl_clanid "2456601"
-//cl_clanid "8291083"
-//cl_clanid ""
+//cl_clanid "0"
 
 
 ///////////////
