--- a/train.cfg
+++ b/train.cfg
@@ -1,6 +1,6 @@
 echo
 echo "   ---------------------   "
-echo "   |   Aug. 23, 2018   |   "
+echo "   |   Dec. 18, 2018   |   "
 
 
 game_type 0
@@ -50,8 +50,8 @@ mp_t_default_primary ""
 mp_ct_default_primary ""
 mp_t_default_secondary "weapon_glock"
 mp_ct_default_secondary "weapon_hkp2000"
-mp_t_default_grenades "weapon_tagrenade weapon_flashbang weapon_flashbang weapon_smokegrenade"
-mp_ct_default_grenades "weapon_tagrenade weapon_flashbang weapon_flashbang weapon_smokegrenade"
+mp_t_default_grenades "weapon_snowball weapon_flashbang weapon_flashbang weapon_smokegrenade"
+mp_ct_default_grenades "weapon_snowball weapon_flashbang weapon_flashbang weapon_smokegrenade"
 
 mp_weapons_allow_map_placed 0
 mp_match_end_restart 1
