--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Dec. 18, 2018   |   "
+echo "   |   Dec. 26, 2018   |   "
 
-// Launch: -freq 144 -threads 8 -no-browser -nojoy -tickrate 128
+// Launch: -freq 144 -tickrate 128
 
 
 ///////////////
@@ -10,10 +10,10 @@ echo "   |   Dec. 18, 2018   |   "
 ///////////////
 
 mm_dedicated_search_maxping "350.000000"
-net_client_steamdatagram_enable_override "-1"    // -1 = UDP, 0 = Auto, 1 = SDR
-sdr ClientForceRelayCluster ""                  // sgp, tyo, hkg, lax, eat
+net_client_steamdatagram_enable_override "-1"   // -1 = UDP, 0 = Auto, 1 = SDR
+sdr ClientForceRelayCluster ""                  // sgp, tyo, hkg, lax, eat, ord
 
-fps_max "300"
+fps_max "500"
 fps_max_menu "120"
 
 rate "196608"
@@ -31,7 +31,7 @@ volume "1"
 
 snd_mix_async "1"
 snd_mixahead "0.020"
-snd_mute_losefocus "1"
+snd_mute_losefocus "0"
 
 snd_deathcamera_volume "0.000000"
 snd_dzmusic_volume "0.000000"
@@ -247,7 +247,7 @@ bind "b" "+spray_menu"
 bind "c" "radio3"
 bind "d" "+moveright"
 bind "e" "slot3"
-bind "f" "toggle cl_radar_always_centered 0 1; toggle cl_radar_scale 0.3 0.7; toggle cl_righthand 1 0; toggle cl_teamid_overhead_always 2 1"
+bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_teamid_overhead_always 1 2 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
 unbind "i"
@@ -337,7 +337,7 @@ bind "F12" "exec csgo.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "lastinv"
 bind "MOUSE3" "+lookatweapon"
-bind "MOUSE4" "toggle voice_enable 0 1"
+bind "MOUSE4" "invnext"                 // "toggle voice_enable 0 1"
 bind "MOUSE5" "+attack2"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
@@ -352,9 +352,9 @@ developer "0"
 con_enable "1"
 con_timestamp "0"
 
-con_filter_enable "2"
-con_filter_text "Damage"
-con_filter_text_out "Player:"
+con_filter_enable "0"
+con_filter_text ""
+con_filter_text_out ""
 
 cl_downloadfilter "none"
 
@@ -377,7 +377,6 @@ engine_no_focus_sleep "0"
 lobby_default_privacy_bits1 "0"
 
 // cl_clanid "2456601"
-// cl_clanid "8291083"
 cl_clanid "0"
 
 
