--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -337,7 +337,7 @@ bind "F12" "exec csgo.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "lastinv"
 bind "MOUSE3" "+lookatweapon"
-bind "MOUSE4" "invnext"                 // "toggle voice_enable 0 1"
+bind "MOUSE4" "invprev"             // "toggle voice_enable 0 1"
 bind "MOUSE5" "+attack2"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
