--- a/napkincsgo.cfg
+++ b/napkincsgo.cfg
@@ -121,14 +121,14 @@ cpu_frequency_monitoring "0"
 mat_monitorgamma "2.000000"
 
 viewmodel_fov "60"
-viewmodel_offset_x "1"				// "2.5"
-viewmodel_offset_y "1"				// "2"
+viewmodel_offset_x "1"                  // "2.5"
+viewmodel_offset_y "1"                  // "2"
 viewmodel_offset_z "-1.5"
 viewmodel_presetpos "1"
 viewmodel_recoil "1"
 
-cl_viewmodel_shift_left_amt "1.5"	// "0.5"
-cl_viewmodel_shift_right_amt "0.75"	// "0.25"
+cl_viewmodel_shift_left_amt "1.5"       // "0.5"
+cl_viewmodel_shift_right_amt "0.75"     // "0.25"
 
 cl_bob_lower_amt "5"
 cl_bobcycle "0.98"
@@ -341,7 +341,7 @@ bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE3" "+lookatweapon"
 bind "MOUSE4" "lastinv"
-bind "MOUSE5" "invnext"                 // "toggle voice_enable 0 1"
+bind "MOUSE5" "invprev"             // "toggle voice_enable 0 1"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
